--- a/task-02.html
+++ b/task-02.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+    <p><a class="link link_back" href="index.html">Go back</a></p>
 
     <ul id="ingredients"></ul>
 
